2005-04-26  Tom Tromey  <tromey@redhat.com>

	* treegen.cc (generate): Clear DECL_EXTERNAL.
	* tree.cc (visit_method): Clear DECL_EXTERNAL.
	(build_jni_stub): Don't bother setting DECL_EXTERNAL.
	* builtins.cc (add): Always set DECL_EXTERNAL.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_jni_stub): Make a block and link it into the
	method tree.  Don't take address of function decls.  Correctly
	build reference to method's class.

2005-04-18  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_class): Don't lay out vtable for array
	types.

2005-04-20  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (HACK_WANT_OUTPUT_H): Don't define.
	* glue.hh: Include output.h earlier, and unconditionally.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_vtable): Compute class reference.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* treegen.cc (generate): Don't let -1 line number slip through.
	* tree.cc (annotate): Do nothing with negative line number.

2005-04-02  Tom Tromey  <tromey@redhat.com>

	* hooks.hh (type_catch_class): Declare.
	* decl.cc (build_catch_class_type): New function.
	(initialize_decls): Call it.
	(type_catch_class): New global.
	* classobj.hh (class_object_creator::compute_catch_classes):
	Declare.
	* classobj.cc (compute_catch_classes): New method.
	(create_class_instance): Use it.
	* tree.cc (visit_catch): Use map_catch_class.
	* builtins.cc (map_catch_class): New method.
	(get_catch_map): Likewise.
	* builtins.hh (tree_builtins::catch_map): New field.
	(tree_builtins::catch_map_type): Declare.
	(tree_builtins::map_catch_class): Declare.
	(tree_builtins::get_catch_map): Likewise.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* builtins.cc: Include util.h.
	(hash_utf8): Use UTF8_GET.
	* util.h (append_gpp_mangled_name): Wrap in 'extern "C"'.

2005-03-29  Tom Tromey  <tromey@redhat.com>

	* util.h: Changed header guard names.
	* treegen.hh: Changed header guard names.
	* hooks.hh: Changed header guard names.