@@ -1,5 +1,12 @@
 2005-04-26  Tom Tromey  <tromey@redhat.com>
 
+	* builtins.cc (lay_out_vtable): Handle abstract methods.
+	* classobj.cc (create_one_method_record): Handle abstract
+	methods.
+	* abi.cc (get_vtable): Don't generate vtable for interface.
+
+2005-04-26  Tom Tromey  <tromey@redhat.com>
+
 	* treegen.cc (generate): Clear DECL_EXTERNAL.
 	* tree.cc (visit_method): Clear DECL_EXTERNAL.
 	(build_jni_stub): Don't bother setting DECL_EXTERNAL.
